# cot

./: .gitattributes  .gitignore  CFTC_API_COLUMN_MAPPING.md  CLAUDE.md  INSTALL.md  README.md  SETUP_HISTORICAL_DATA.md  check_json.py  cleanup_old_files.sh  cleanup_refined.sh  clustering_demo.py  clustering_no_sklearn.py  commit_script.sh  find_function.py  find_main.py  find_main_and_percentile.py  find_main_function.py  find_momentum.py  find_percentile_ui.py  find_search_ui.py  git_commands.sh  instruments_LegacyF.json  migrate_to_modular.py  move_files.py  move_files.sh  organize_files.py  participation_divergence_demo.py  participation_divergence_implementation.py  participation_divergence_output.txt  participation_example.py  pyproject.toml  requirements.txt  search_multi.py  streamlit_app.py  temp_find_function.py  test_app.py  test_clustering.py  test_heterogeneity.py  test_microstructure.py  test_regime_detection.py  (+1 more)
.devcontainer/: devcontainer.json
instrument_management/: README.md  compare_json_files.py  futures_cot_mapping.py  futures_symbols_current.json  instrument_database.py  instruments_LegacyF_new.json
src/: README.md  app.py  app_modular.py  config.py  cot_setup.py  daily_futures_update.py  dashboard_overview.py  data_fetcher.py  disaggregated_config.py  disaggregated_dashboard.py  disaggregated_data_fetcher.py  disaggregated_historical_data_loader.py  display_functions.py  display_functions_clean.py  display_functions_exact.py  display_functions_futures_first.py  display_functions_lwc_sync.py  display_synchronized_unified.py  functions.py  main.py  (+13 more)
(+53 files in other folders)
